name:                config-file-liveness-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leastauthority/config-file-liveness-server#readme
license:             BSD3
license-file:        LICENSE
author:              Jean-Paul Calderone
maintainer:          support@leastauthority.com
copyright:           2017 Least Authority TFA GmbH
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , time
                     , aeson
                     , directory
                     , servant
                     , wai
                     , servant-server
  default-language:    Haskell2010


executable config-file-liveness-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fPIC
  ld-options:          -static
  build-depends:       base
                     , time
                     , directory
                     , unix
                     , text
                     , wai
                     , warp
                     , config-file-liveness-server
  default-language:    Haskell2010

test-suite config-file-liveness-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , config-file-liveness-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/leastauthority/config-file-liveness-server
